# klib

./: .gitignore  CMakeLists.txt  LICENSE  README.md  TODO  meson.build  meson_options.txt  xlib.pc.in
include/klib/: khash.h  kvec.h
include/xlib/: alloc.h  cmdopt_parser.h  error.h  xargparse.h  xassert.h  xhash.h  xlog.h  xtypes.h  xvec.h
src/: xargparse.c  xlog.c
test/: Makefile  khash_keith.c  khash_keith2.c  khash_test.c  kvec_test.cc  test_argparse.c  test_cmd_opt.c  test_cmd_opt.cpp  xhash_keith.c  xhash_keith2.c  xhash_test.c  xvec_test.cpp
